Fix timeline timestamps truncated overflow; fixes #7291

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3541,7 +3541,7 @@ a.copyright {
    .h_info {
       float: left;
       width: 25%;
-      max-width: 140px;
+      max-width: 145px;
    }
 
    .right .h_info {
